@@ -3,13 +3,10 @@
 <!--
   $Id$
   $Log$
-  Revision 1.19  2011-05-19 14:26:58  r29173
-  remove usage of ngspiceVersion.xml in autogen.sh
+  Revision 1.20  2011-05-20 16:15:04  rlar
+  revert ngspiceMakfile.am.xml
 
-  Revision 1.18  2011/05/19 10:11:06  r29173
-  all xml files are concatenated into one single file ngspice.xml - except ngspiceMakefile.am.xml
-
-  Revision 1.17  2011/02/21 19:40:23  dwarning
+  Revision 1.17  2011-02-21 19:40:23  dwarning
   better maintainer-clean
 
   Revision 1.16  2011/01/25 17:33:37  rlar
@@ -96,46 +93,36 @@
 
 
 <admst:template match="code">
-<admst:choose>
-  <admst:when test="[name='hic0_full']">
-    <admst:new datatype="attribute" arguments="ngspicename">
-      <admst:push into="../attribute" select="." onduplicate="abort"/>
-      <admst:value-to select="value" value="hicum0"/>
-    </admst:new>
-  </admst:when>
-  <admst:when test="[name='hic2_full']">
-    <admst:new datatype="attribute" arguments="ngspicename">
-      <admst:push into="../attribute" select="." onduplicate="abort"/>
-      <admst:value-to select="value" value="hicum2"/>
-    </admst:new>
-  </admst:when>
-  <admst:when test="[name='bjt504_va']">
-    <admst:new datatype="attribute" arguments="ngspicename">
-      <admst:push into="../attribute" select="." onduplicate="abort"/>
-      <admst:value-to select="value" value="mextram"/>
-    </admst:new>
-  </admst:when>
-  <admst:when test="[name='psp102']">
-    <admst:new datatype="attribute" arguments="ngspicename">
-      <admst:push into="../attribute" select="." onduplicate="abort"/>
-      <admst:value-to select="value" value="psp102"/>
-    </admst:new>
-  </admst:when>
-  <admst:otherwise>
-    <admst:new datatype="attribute" arguments="ngspicename">
-      <admst:push into="../attribute" select="." onduplicate="abort"/>
-      <admst:value-of select="../name"/>
-      <admst:value-to select="value" value="%s"/>
-    </admst:new>
-  </admst:otherwise>
-</admst:choose>
-<admst:variable name="module" select="%(attribute[name='ngspicename']/value)"/>
+<admst:value-of select="attribute[name='ngspicename']/value"/>
+<admst:variable name="module" select="%s"/>
 ## Process this file with automake to produce Makefile.in
 
 ADMSXMLINTERFACE=\$(srcdir)/../admst
 $(module).c: admsva/$(module).va
-	admsXml -I\$(srcdir) -I\$(srcdir)/admsva -f \$(srcdir)/admsva/$(module).va \\
-	-e \$(ADMSXMLINTERFACE)/ngspice.xml
+	admsXml -I\$(srcdir) -I\$(srcdir)/admsva \$(srcdir)/admsva/$(module).va \\
+	-e \$(ADMSXMLINTERFACE)/ngspiceVersion.xml \\
+	-e \$(ADMSXMLINTERFACE)/ngspiceMODULEitf.h.xml \\
+	-e \$(ADMSXMLINTERFACE)/ngspiceMODULEinit.c.xml \\
+	-e \$(ADMSXMLINTERFACE)/ngspiceMODULEinit.h.xml \\
+	-e \$(ADMSXMLINTERFACE)/ngspiceMODULEext.h.xml \\
+	-e \$(ADMSXMLINTERFACE)/ngspiceMODULEdefs.h.xml \\
+	-e \$(ADMSXMLINTERFACE)/ngspiceMODULEask.c.xml \\
+	-e \$(ADMSXMLINTERFACE)/ngspiceMODULEmask.c.xml \\
+	-e \$(ADMSXMLINTERFACE)/ngspiceMODULEpar.c.xml \\
+	-e \$(ADMSXMLINTERFACE)/ngspiceMODULEmpar.c.xml \\
+	-e \$(ADMSXMLINTERFACE)/ngspiceMODULEload.c.xml \\
+	-e \$(ADMSXMLINTERFACE)/ngspiceMODULEacld.c.xml \\
+	-e \$(ADMSXMLINTERFACE)/ngspiceMODULEpzld.c.xml \\
+	-e \$(ADMSXMLINTERFACE)/ngspiceMODULEtemp.c.xml \\
+	-e \$(ADMSXMLINTERFACE)/ngspiceMODULEtrunc.c.xml \\
+	-e \$(ADMSXMLINTERFACE)/ngspiceMODULEsetup.c.xml \\
+	-e \$(ADMSXMLINTERFACE)/ngspiceMODULEdel.c.xml \\
+	-e \$(ADMSXMLINTERFACE)/ngspiceMODULEmdel.c.xml \\
+	-e \$(ADMSXMLINTERFACE)/ngspiceMODULEdest.c.xml \\
+	-e \$(ADMSXMLINTERFACE)/ngspiceMODULEnoise.c.xml \\
+	-e \$(ADMSXMLINTERFACE)/ngspiceMODULEguesstopology.c.xml \\
+	-e \$(ADMSXMLINTERFACE)/ngspiceMODULE.hxx.xml \\
+	-e \$(ADMSXMLINTERFACE)/ngspiceMODULE.c.xml
 	perl -p -i.bak -e 's/IOP\\("(\\w+)"/IOP("\\L\\1"/' $(module).c
 
 noinst_LTLIBRARIES = lib$(module).la
@@ -228,7 +215,11 @@ MAINTAINERCLEANFILES = Makefile.in
 
 <admst:for-each select="/module">
   <admst:open file="Makefile.am">
-    <admst:text format="## created automatically\n"/>
+    <admst:value-of select="/simulator/package_string"/>
+    <admst:text format="##\n## Interface: %s\n"/>
+    <admst:value-of select="/simulator/currentdate"/>
+    <admst:value-of select="/simulator/fullname"/>
+    <admst:text format="## created by: %s - %s\n"/>
     <admst:apply-templates select="." match="code"/>
   </admst:open>
   <admst:message format="Makefile.am: file created\n"/>
