@@ -1,3 +1,7 @@
+2011-05-20  Robert Larice
+ * src/spicelib/devices/adms/admst/ngspiceMakefile.am.xml:
+    revert ngspiceMakfile.am.xml
+
 2011-05-19  Dietmar Warning
  * spicelib/devices/bsim3v32/b3v32temp.c: move the mulu0 entry outside
    the size dependent section, like delvto
